--- a/java2/1_oop/ja03_generics/generics_intro/pom.xml
+++ b/java2/1_oop/ja03_generics/generics_intro/pom.xml
@@ -8,10 +8,10 @@
     <artifactId>generics_intro</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+    <parent>
+        <groupId>org.example</groupId>
+        <artifactId>generics-parent</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
 </project>
