Java2.OOP.generics - add slides2_task as a submodule

--- a/java2/1_oop/ja03_generics/pom.xml
+++ b/java2/1_oop/ja03_generics/pom.xml
@@ -9,6 +9,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>pdf_task2_trees</module>
+        <module>slides2_task</module>
     </modules>
     <packaging>pom</packaging>
 
