Java2.OOP.generics - add slides_map_task

--- a/java2/1_oop/ja03_generics/pom.xml
+++ b/java2/1_oop/ja03_generics/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>pdf_task2_trees</module>
         <module>slides2_task</module>
+        <module>slides_map_task</module>
     </modules>
     <packaging>pom</packaging>
 
