Java2.OOP.generics - add w3_object_finder task
* find element in a list and return either its index or -1

--- a/java2/1_oop/ja03_generics/pom.xml
+++ b/java2/1_oop/ja03_generics/pom.xml
@@ -12,6 +12,7 @@
         <module>slides2_task</module>
         <module>slides_map_task</module>
         <module>w3_maps</module>
+        <module>w3_object_finder</module>
     </modules>
     <packaging>pom</packaging>
 
