Java2.OOP.generics - add list_merge task

--- a/java2/1_oop/ja03_generics/pom.xml
+++ b/java2/1_oop/ja03_generics/pom.xml
@@ -13,6 +13,7 @@
         <module>slides_map_task</module>
         <module>w3_maps</module>
         <module>w3_object_finder</module>
+        <module>list_merge</module>
     </modules>
     <packaging>pom</packaging>
 
