Java2.databases.introduction - add schema darbuotojai

--- a/java2/2_database/mysql_sakila_example/Dockerfile
+++ b/java2/2_database/mysql_sakila_example/Dockerfile
@@ -3,3 +3,5 @@ FROM mysql:8
 COPY sakila/1-sakila-schema.sql /docker-entrypoint-initdb.d/step_1.sql
 COPY sakila/2-sakila-data.sql /docker-entrypoint-initdb.d/step_2.sql
 COPY sakila/3-sakila-complete.sql /docker-entrypoint-initdb.d/step_3.sql
+
+COPY darbuotojai/1-darbuotojai-schema.sql /docker-entrypoint-initdb.d/step_4.sql
