Java2.databases - add schema projektai

--- a/java2/2_database/mysql_sakila_example/Dockerfile
+++ b/java2/2_database/mysql_sakila_example/Dockerfile
@@ -5,3 +5,5 @@ COPY sakila/2-sakila-data.sql /docker-entrypoint-initdb.d/step_2.sql
 COPY sakila/3-sakila-complete.sql /docker-entrypoint-initdb.d/step_3.sql
 
 COPY darbuotojai/1-darbuotojai-schema.sql /docker-entrypoint-initdb.d/step_4.sql
+
+COPY projektas/1-projektas-schema.sql /docker-entrypoint-initdb.d/step_5.sql
