--- a/java2/2_database/mysql_sakila_example/docker-compose.yaml
+++ b/java2/2_database/mysql_sakila_example/docker-compose.yaml
@@ -8,6 +8,7 @@ services:
       context: .
       dockerfile: ./Dockerfile
     environment:
+      LANG: C.UTF_8
       MYSQL_DATABASE: 'sakila'
       # So you don't have to use root, but you can if you like
       MYSQL_USER: 'user'
@@ -24,6 +25,11 @@ services:
       # Where our data will be persisted
     volumes:
       - my-db:/var/lib/mysql
+    command:
+      - --character-set-server=utf8mb4
+      - --collation-server=utf8mb4_unicode_ci
+      - --skip-character-set-client-handshake
+
 # Names our volume
 volumes:
   my-db:
