--- a/java2/2_database/mysql_sakila_example/docker-compose.yaml
+++ b/java2/2_database/mysql_sakila_example/docker-compose.yaml
@@ -24,12 +24,36 @@ services:
       - '3306'
       # Where our data will be persisted
     volumes:
-      - my-db:/var/lib/mysql
+      - mysql-db:/var/lib/mysql
     command:
       - --character-set-server=utf8mb4
       - --collation-server=utf8mb4_unicode_ci
       - --skip-character-set-client-handshake
 
+  postgres:
+    image: postgres
+    environment:
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: code_academy_db
+    ports:
+      - '5432:5432'
+    volumes:
+      - posgres-db:/var/lib/postgresql
+
+  mongo:
+    image: mongodb/mongodb-community-server:5.0.17-ubi8
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: user
+      MONGO_INITDB_ROOT_PASSWORD: password
+      MONGO_INITDB_DATABASE: code_academy_db
+    ports:
+      - '27017:27017'
+    volumes:
+      - mongo-db:/var/lib/mongo
+
 # Names our volume
 volumes:
-  my-db:
+  mysql-db:
+  posgres-db:
+  mongo-db:
