Java2.databases - implement getting actor from database

--- a/java2/2_database/jdbc_sakila/pom.xml
+++ b/java2/2_database/jdbc_sakila/pom.xml
@@ -29,6 +29,12 @@
             <version>6.2.6.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.32</version>
+        </dependency>
+
 <!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core &ndash;&gt;-->
 <!--        <dependency>-->
 <!--            <groupId>org.apache.logging.log4j</groupId>-->
