--- a/java2/2_database/test/pom.xml
+++ b/java2/2_database/test/pom.xml
@@ -35,6 +35,13 @@
             <version>8.0.32</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/de.rtner/PBKDF2 -->
+        <dependency>
+            <groupId>de.rtner</groupId>
+            <artifactId>PBKDF2</artifactId>
+            <version>1.1.4</version>
+        </dependency>
+
 
     </dependencies>
 
