--- a/java2/3_spring/thymeleaf_blog/src/main/resources/application.properties
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+# kelias ? DB (in memory, ram?uose).
+spring.datasource.url=jdbc:h2:mem:blog_db
+# default user
+spring.datasource.username=sa
+# default password
+spring.datasource.password=
 
+#?jungti H2 WEB konsol?
+spring.h2.console.enabled=true
+# H2 web konsol?s adresas (URL)
+spring.h2.console.path=/h2
