--- a/java2/3_spring/thymeleaf_blog/src/main/resources/application.properties
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/application.properties
@@ -1,9 +1,15 @@
+logging.level.root=trace
+
+
 # kelias ? DB (in memory, ram?uose).
 spring.datasource.url=jdbc:h2:mem:blog_db
 # default user
 spring.datasource.username=sa
 # default password
 spring.datasource.password=
+
+# schemos iniciavimo scripto vieta
+spring.sql.init.schema-locations=classpath:db/schema.sql
 
 #?jungti H2 WEB konsol?
 spring.h2.console.enabled=true
