--- a/java2/3_spring/thymeleaf_blog/src/main/resources/application.properties
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.datasource.password=
 
 # schemos iniciavimo scripto vieta
 spring.sql.init.schema-locations=classpath:db/schema.sql
+spring.sql.init.data-locations=classpath:db/data.sql
 
 #?jungti H2 WEB konsol?
 spring.h2.console.enabled=true
