Disable whitelabel error pages

--- a/java2/3_spring/thymeleaf_blog/src/main/resources/application.properties
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 logging.level.root=info
 
-
-# kelias ? DB (in memory, ram?uose).
+# kelias į DB (in memory, ram'uose).
 spring.datasource.url=jdbc:h2:mem:blog_db
 # default user
 spring.datasource.username=sa
@@ -19,7 +18,10 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.show-sql = true
 
-# ?jungti H2 WEB konsol?
+# įjungti H2 WEB konsolę
 spring.h2.console.enabled=true
-# H2 web konsol?s adresas (URL)
+# H2 web konsolės adresas (URL)
 spring.h2.console.path=/h2
+
+# Disable whitelabel error pages
+server.error.whitelabel.enabled=false
