Set active profile using properties files

--- a/java2/3_spring/thymeleaf_blog/src/main/resources/application.properties
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# Can set active profile using ... application.properties
+spring.profiles.active=prodProfile2,myCustomProfile
+
 logging.level.root=info
 
 # kelias į DB (in memory, ram'uose).
