Try using values from property files, depending on active profile

--- a/java2/3_spring/thymeleaf_blog/src/main/resources/application.properties
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 # Can set active profile using ... application.properties
-spring.profiles.active=prodProfile2,myCustomProfile
+#spring.profiles.active=prodProfile2,myCustomProfile
+
+my.custom.environment.property=default property value
 
 logging.level.root=info
 
