--- a/java2/3_spring/thymeleaf_blog/src/main/resources/application.yaml
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/application.yaml
@@ -1,20 +1,13 @@
 # Can set active profile using ... application.yaml
 #spring.profiles.active=prodProfile2,myCustomProfile
 
-
-custom:
-  properties:
-    email: my@email.com
-    age: 30
-
-my.custom.environment.property: "default property value"
-
-logging:
-  level:
-    root: info
-
-# kelias į DB (in memory, ram'uose).
+---
 spring:
+  config:
+    activate:
+      on-profile: default
+
+  # kelias į DB (in memory, ram'uose).
   datasource:
     url: "jdbc:h2:mem:blog_db"
     # default user
@@ -31,10 +24,10 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
-      dialect: org.hibernate.dialect.H2Dialect
     database-platform: org.hibernate.dialect.H2Dialect
     properties:
       hibernate:
+        dialect: org.hibernate.dialect.H2Dialect
         format_sql: true
     show-sql: true
 
@@ -50,10 +43,44 @@ server:
   error:
     whitelabel:
       enabled: false
+custom:
+  properties:
+    email: my@email.com
+    age: 30
 
+my.custom.environment.property: "default property value"
+
+logging:
+  level:
+    root: info
 ---
 spring:
   config:
     activate:
       on-profile: testProfile
 my.custom.environment.property: "testProfile property value"
+
+---
+spring:
+  config:
+    activate:
+      on-profile: in_docker
+
+  # kelias į DB (in memory, ram'uose).
+  datasource:
+    url: "${DATABASE_URL}"
+    # default user
+    username: "${DATABASE_USERNAME}"
+    # default password
+    password: "${DATABASE_PASSWORD}"
+
+  # nurodom kita DB dialekta
+  jpa:
+    hibernate:
+      ddl-auto: update
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
+        format_sql: true
+    show-sql: true
