--- a/java2/3_spring/thymeleaf_blog/src/main/resources/application.yaml
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/application.yaml
@@ -1,6 +1,20 @@
-# Can set active profile using ... application.yaml
-#spring.profiles.active=prodProfile2,myCustomProfile
+spring:
+  profiles:
+    group:
+      default:
+        - default
+        - test
+        - h2
+      mysql:
+        - default
+        - test
+        - mysql
+      prod:
+        - default
+        - mysql
 
+
+# Default (safe by default) properties
 ---
 spring:
   config:
@@ -11,75 +25,70 @@ spring:
       filter:
         enabled: true
 
-  # kelias į DB (in memory, ram'uose).
-  datasource:
-    url: "jdbc:h2:mem:blog_db"
-    # default user
-    username: sa
-    # default password
-    password:
-
-  # validuoja pgl db/migration sql
   jpa:
     hibernate:
       ddl-auto: validate
-    database-platform: org.hibernate.dialect.H2Dialect
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.H2Dialect
-        format_sql: true
-    show-sql: true
-
-# įjungti H2 WEB konsolę
-  h2:
-    console:
-      enabled: true
-      # H2 web konsolės adresas (URL)
-      path: /h2
 
 # Disable whitelabel error pages
 server:
   error:
     whitelabel:
       enabled: false
-custom:
-  properties:
-    email: my@email.com
-    age: 30
 
-my.custom.environment.property: "default property value"
 
-#logging:
-#  level:
-#    root: info
+# Properties that should suite any test profile
 ---
 spring:
   config:
     activate:
-      on-profile: testProfile
-my.custom.environment.property: "testProfile property value"
+      on-profile: test
 
----
-spring:
-  config:
-    activate:
-      on-profile: in_docker
-
-  # kelias į DB (in memory, ram'uose).
-  datasource:
-    url: "${DATABASE_URL}"
-    # default user
-    username: "${DATABASE_USERNAME}"
-    # default password
-    password: "${DATABASE_PASSWORD}"
-
-  # nurodom kita DB dialekta
   jpa:
     hibernate:
       ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+
+
+# Properties that are relevant when running with h2
+---
+spring:
+  config:
+    activate:
+      on-profile: h2
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.H2Dialect
+
+  datasource:
+    url: "jdbc:h2:mem:blog_db"
+    username: sa
+    password:
+
+  h2:
+    console:
+      enabled: true
+      path: /h2
+
+
+# Properties that are relevant when running with mysql
+---
+spring:
+  config:
+    activate:
+      on-profile: mysql
+
+  jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
-        format_sql: true
-    show-sql: true
+
+  datasource:
+    url: "${DATABASE_URL}"
+    username: "${DATABASE_USERNAME}"
+    password: "${DATABASE_PASSWORD}"
