added hidden delete

--- a/java2/3_spring/thymeleaf_blog/src/main/resources/application.yaml
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/application.yaml
@@ -6,6 +6,10 @@ spring:
   config:
     activate:
       on-profile: default
+  mvc:
+    hiddenmethod:
+      filter:
+        enabled: true
 
   # kelias į DB (in memory, ram'uose).
   datasource:
